[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scenes/credits.gd" type="Script" id=1]
[ext_resource path="res://assets/solid_block.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/genghiskhan_42.tres" type="DynamicFont" id=3]

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="Container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -232.5
margin_right = 200.0
margin_bottom = 232.5

[node name="Thank You" type="Label" parent="Container"]
margin_right = 400.0
margin_bottom = 123.0
custom_fonts/font = ExtResource( 3 )
text = "Thanks for playing!

Your final score was:"
align = 1

[node name="FinalScore" type="Label" parent="Container"]
margin_top = 127.0
margin_right = 400.0
margin_bottom = 166.0
custom_fonts/font = ExtResource( 3 )
text = "1000000"
align = 1

[node name="Clicks" type="Label" parent="Container"]
margin_top = 170.0
margin_right = 400.0
margin_bottom = 209.0
custom_fonts/font = ExtResource( 3 )
text = "Amount of clicks:"
align = 1

[node name="FinalClicks" type="Label" parent="Container"]
margin_top = 213.0
margin_right = 400.0
margin_bottom = 252.0
custom_fonts/font = ExtResource( 3 )
text = "1000"
align = 1

[node name="SlowDown" type="Label" parent="Container"]
margin_top = 256.0
margin_right = 400.0
margin_bottom = 295.0
custom_fonts/font = ExtResource( 3 )
text = "Total slow down duration:"
align = 1

[node name="TotalSlowDown" type="Label" parent="Container"]
margin_top = 299.0
margin_right = 400.0
margin_bottom = 338.0
custom_fonts/font = ExtResource( 3 )
text = "0.2 Secs"
align = 1

[node name="ExitText" type="Label" parent="Container"]
margin_top = 342.0
margin_right = 400.0
margin_bottom = 465.0
custom_fonts/font = ExtResource( 3 )
text = "
Press \"Esc\" to exit 
or \"Space\" to play again."
align = 1
